tests/negative/test_mac_redef_args_variad.orb
mac foo () {
    ret ();
};

mac foo (a::variadic) {
    ret ();
};

fnc main () () {};